# app/routes/payments.py
@@ -2,6 +2,7 @@ from app.controller.payments_controller import (
     single_user_payments,
     all_user_payments,
     insert_payment,
+    delete_payment,
 )
 
 
@@ -22,5 +23,12 @@ def get_all_payments():
 def add_payment(body):
 
     insert_payment(body)
+
+    return "", 204
+
+
+def remove_payment(id):
+
+    delete_payment(id)
 
     return "", 204
